<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>ark-component-mq</name>
    <groupId>com.ark.mq</groupId>
    <artifactId>ark-component-mq</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>

    </properties>

    <modules>
        <module>ark-component-mq-api</module>
        <module>ark-component-mq-core</module>
        <module>ark-component-mq-rocketmq</module>
        <module>ark-component-mq-rocketmq-spring-boot-starter</module>
        <module>ark-component-mq-rabbitmq</module>
        <module>ark-component-mq-rabbitmq-spring-boot-starter</module>
        <module>ark-component-mq-kafka</module>
        <module>ark-component-mq-kafka-spring-boot-starter</module>
        <module>ark-component-mq-integration</module>
        <module>ark-component-mq-integration-spring-boot-starter</module>
        <module>ark-component-mq-integration-spring-boot-starter-test</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.ark.boot</groupId>
                <artifactId>ark-dependencies</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-api</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-core</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-rocketmq</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-rocketmq-spring-boot-starter</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-rabbitmq</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-rabbitmq-spring-boot-starter</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-kafka</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-kafka-spring-boot-starter</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-integration</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.mq</groupId>
                <artifactId>ark-component-mq-integration-spring-boot-starter</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
